# classcheck

./: .gitignore  README.md  pyproject.toml
classcheck/: __init__.py  api.py  core.py  emailer.py  models.py  paths.py  reports.py  scheduler.py  services.py
classcheck/scripts/: admin.py  check_now.py  enroll.py  report.py
tests/: test_api.py  test_emailer.py  test_hardening.py  test_reports.py  test_scheduler.py  test_voting.py
web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx
web/src/app/attendance/: page.tsx
web/src/app/classes/: page.tsx
web/src/app/enroll/: page.tsx
web/src/app/people/: page.tsx
web/src/components/: enroll-webcam.tsx  sidebar.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx
web/src/lib/: api.ts  utils.ts
